--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,13 @@ node_modules
 ps_modules
 settings.json
 .eslint*
+temp
+*.map
+baseline-analysis-task/index.js
+delivery-analysis-task/index.js
+.taskkey
+KiuwanLocalANalyzer/**
+baseline-analysis-task/ps_modules
+delivery-analysis-task/ps_modules
+baseline-analysis-task/node_modules
+delivery-analysis-task/node_modules
