--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
-  "name": "kiuwan-analysis-extension",
+  "name": "kiuwan-extension",
   "version": "1.0.0",
-  "description": "",
+  "description": "VSTS extension for Kiuwan written in Node.js",
   "main": "index.js",
-  "dependencies": {
-    "vsts-task-lib": "^2.1.0"
-  },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jsalado/kiuwan-vsts-extension.git"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "author": "Javier Salado",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jsalado/kiuwan-vsts-extension/issues"
+  "dependencies": {
+    "vsts-task-lib": "^2.2.1"
   },
-  "homepage": "https://github.com/jsalado/kiuwan-vsts-extension#readme"
+  "devDependencies": {
+    "typescript": "^2.7.2",
+    "@types/node": "^9.4.6",
+    "@types/q": "^1.0.7",
+    "vsts-task-tool-lib": "^0.4.1"
+  }
 }
