--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ baseline-analysis-task/ps_modules
 delivery-analysis-task/ps_modules
 baseline-analysis-task/node_modules
 delivery-analysis-task/node_modules
+*.zip
