Kiuwan results integrated

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,8 +28,9 @@
                 "BUILD_BUILDNUMBER": "25",
                 "KIUWANUSER": "jellyfish@kiuwan.com",
                 "KIUWANPASSWD": "J4v13rS4l4d0",
-                "SYSTEM_TEAMPROJECT": "My project",
-                "BUILD_SOURCESDIRECTORY": "${workspaceFolder}\\temp\\MyProjectCode",
+                "SYSTEM_TEAMPROJECT": "WebGoat.Net",
+                "BUILD_SOURCESDIRECTORY": "${workspaceFolder}\\_temp\\MyProjectCode",
+                "BUILD_ARTIFACTSTAGINGDIRECTORY": "${workspaceFolder}\\_temp",
                 "BUILD_SOURCEBRANCHNAME": "Development Branch",
                 "AGENT_NAME": "Any Agent",
                 "AGENT_HOMEDIRECTORY": "${workspaceFolder}",
