Support to get Delivery audit results
Added support to get latest delivery analysis results and upload them as
an attachment file to the build.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "name": "Launch Kiuwan task",
             "program": "${workspaceFolder}\\delivery-analysis-task\\index.js",
             "env": {
-                "INPUT_ANALYSISLABEL": "My label",
+                "INPUT_ANALYSISLABEL": "Delivery",
                 "INPUT_SKIPCLONES": "true",
                 "INPUT_SKIPARCH": "true",
                 "INPUT_ANALYSISSCOPE": "completeDelivery",
@@ -24,13 +24,13 @@
                 "INPUT_DBTECHNOLOGY": "None",
                 "INPUT_PROJECTNAMESELECTOR": "default",
                 "INPUT_KIUWANCONNECTION": "Kiuwan Connection",
-                "BUILD_BUILDNUMBER": "25",
+                "BUILD_BUILDNUMBER": "177",
                 "KIUWANUSER": "jellyfish@kiuwan.com",
                 "KIUWANPASSWD": "J4v13rS4l4d0",
                 "SYSTEM_TEAMPROJECT": "WebGoat.Net",
                 "BUILD_SOURCESDIRECTORY": "${workspaceFolder}\\_temp\\MyProjectCode",
                 "BUILD_ARTIFACTSTAGINGDIRECTORY": "${workspaceFolder}\\_temp",
-                "BUILD_SOURCEBRANCHNAME": "Development Branch",
+                "BUILD_SOURCEBRANCHNAME": "master",
                 "AGENT_NAME": "Any Agent",
                 "AGENT_HOMEDIRECTORY": "${workspaceFolder}",
                 "KIUWAN_HOME": "c:\\KiuwanLocalAnalyzer.cloud"
