--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.vsix
 *.code-workspace
 node_modules
+node_modules.remove
 ps_modules
 settings.json
 .eslint*
@@ -16,6 +17,8 @@ baseline-analysis-task/ps_modules
 delivery-analysis-task/ps_modules
 baseline-analysis-task/node_modules
 delivery-analysis-task/node_modules
+baseline-analysis-task/node_modules.remove
+delivery-analysis-task/node_modules.remove
 *.zip
 *.txt
 endpoin-definition.json
