Add information for delivery tasks
Now the summary will show the audit result and score and the new Kiuwan
audit tab shows more details on checkpoints, defects and effort

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Kiuwan task",
-            "program": "${workspaceFolder}\\delivery-analysis-task\\index.js",
+            "program": "${workspaceFolder}\\baseline-analysis-task\\index.js",
             "env": {
                 "INPUT_ANALYSISLABEL": "Delivery",
                 "INPUT_SKIPCLONES": "true",
