--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,8 @@ script:
   # Download, unzip and use Kiuwan Local Analyzer with user and password. User and password defined in Travis-ci
   - wget -v https://www.kiuwan.com/pub/analyzer/KiuwanLocalAnalyzer.zip
   - unzip KiuwanLocalAnalyzer.zip -d $HOME/.
-  - $HOME/KiuwanLocalAnalyzer/bin/agent.sh --user $kiuwan_user --pass $kiuwan_password -s $TRAVIS_BUILD_DIR -n $APPNAME -cr $TRAVIS_BUILD_ID -l $TRAVIS_BUILD_ID -bn $BRANCH -wr 
+  # this is the command for baseline
+  - $HOME/KiuwanLocalAnalyzer/bin/agent.sh --user $kiuwan_user --pass $kiuwan_password -s $TRAVIS_BUILD_DIR -n $APPNAME -l $TRAVIS_BUILD_ID -wr 
+  # this is the command for delivery
+  #- $HOME/KiuwanLocalAnalyzer/bin/agent.sh --user $kiuwan_user --pass $kiuwan_password -s $TRAVIS_BUILD_DIR -n $APPNAME -cr $TRAVIS_BUILD_ID -l $TRAVIS_BUILD_ID -bn $BRANCH -wr 
   #- mvn install -Dversion.webxml=30 #this script creates the java application.
