--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Kiuwan TFS Extension",
   "main": "index.js",
   "dependencies": {
-    "vss-web-extension-sdk": "^5.141.0",
     "azure-pipelines-task-lib": "^2.9.3",
     "azure-pipelines-tool-lib": "^0.12.0",
-    "properties-reader": "^2.0.0"
+    "kiuwan-common": "file:kiuwan-common",
+    "properties-reader": "^2.0.0",
+    "vss-web-extension-sdk": "^5.141.0"
   },
   "devDependencies": {
     "@types/node": "^13.13.4",
