Fix enhancer scripts compilation and include it in master build script

--- a/tsconfig-ext.json
+++ b/tsconfig-ext.json
@@ -58,6 +58,7 @@
             "jquery",
             "node"
     ],
+    "skipLibCheck": true                      /* Workaround for https://github.com/microsoft/vss-web-extension-sdk/issues/112 */
   },
   "include": [
     "enhancer/kiuwanAuditTab.ts",
